Add files via upload
2 new API endpoints added.
- /v1/common/getImageListShort
- /v1/common/getImageListDetailed
Moved away from crate rustls-pemfile since it is unmaintained.
